[package]
name = "voyager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
qrcode = "0.12.0"
chrono = "0.4.23"
image = "0.23.14"